package Fuentes;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Fuente {

    private String rutaArchivo;

    public void obtenerHechos() {
        // TODO
    }
}