package filtros;

public class CriterioRangoFechaHora implements CriterioDePertenencia {

  public Boolean evaluarCriterio() {
    // Implementación del criterio de rango de fecha y hora
    // Aquí se puede agregar la lógica para evaluar el criterio
    return true; // Cambiar según la lógica implementada
  }
}