package filtros;

public class CriterioUbicacion implements CriterioDePertenencia {

  public Boolean evaluarCriterio() {
    // Implementación del criterio de ubicación
    // Aquí se puede agregar la lógica para evaluar el criterio
    return true; // Cambiar según la lógica implementada
  }
}