package hechos;

import lombok.Getter;
import lombok.Setter;

/**
 * Clase para representar cada categoria.
 */
@Getter
@Setter
public class Categoria {
  private String nombre;
}
