package hechos;

public class Etiqueta {
}
