package hechos;

import lombok.Getter;
import lombok.Setter;

/**
 * Clase Hecho, la cual representara cada hecho con todos sus atributos.
 */
@Getter
@Setter
public class HechoMultimedia extends Hecho {
  private String multimedia;
}
