package hechos;

import lombok.Getter;
import lombok.Setter;

/**
 * Clase Solicitud, la cual representara cada solicitud de eliminacion de un hecho.
 */
@Getter
@Setter
public class SolicitudDeEliminacion {

    private String descripcion;
    private Hecho hechoSolicitado;
    private Boolean SolicitudAceptado;
}
