package hechos;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Ubicacion {

  private Float latitud;
  private Float longitud;
}
