@startuml

class Contribuyente{
    - String nombre
    - String apellido
    - Interger edad
    + void crearHecho(titulo, descripcion, latitud, longitud, fechaAcontecimiento)
    + void solicitarEliminacionDeHecho(Hecho hecho)
}

class Administrador extends Contribuyente{
    - List<Coleccion> MisColecciones
    + void crearColeccion(String titulo, String descripcion)
    + void importHechosDesdeArchivo(Coleccion coleccion)
    + void aceptarSolicitud(Solicitud solicitud)
    + void rechazarSolicitud(Solicitud solicitud)
    + void etiquetarhecho(Hecho hecho)
}

class Hecho{
    - Long id
    - Boolean visualizarHecho
    - String titulo
    - String descripcion
    - Categoria categoria
    - Etiqueta etiqueta
    - Ubicacion CoordenadasDelHecho
    - DateTime fechaAcontecimiento
    - DateTime fechaCarga
    - Origen OrigenHecho
}

class Categoria{
    - Long id
    - String nombre
}

class ManagerCategoria{
 - Set<String> categorias
}

class Etiqueta{
    - Long id
    - String nombre
}

class HechoMultimedia extends Hecho{
    - String Multimedia
}

class Ubicacion{
    - float latitud
    - float longitud
}

class Coleccion{
    - String titulo
    - String descripcion
    - FuenteEstatica fuente
    - List<Hecho> hechos
    - List<CriterioDePertenencia> criteriosDepertenencia
    + List<Hecho> buscarHechosConFiltros(List<Filtros>)
    + List<Hecho> importarCvg(List<CriterioDePertenencia>)
    + void agregarHecho(Hecho)
    + void quitarHecho(Hecho)
    + void agregarCriterio(CriterioDePertenencia)
    + void quitarCriterio(CriterioDePertenencia)
}

 interface Fuente <<interface>>{
    + List<Hecho> obtenerHechos()
}

 class FuenteEstatica implements Fuente{
    - String ubicacionDelArchivo
    + List<Hecho> obtenerHechos()
}

 class FuenteDinamica implements Fuente{
    + List<Hecho> obtenerHechos()
}

 class FuenteProxy implements Fuente{
    + List<Hecho> obtenerHechos()
}

interface CriterioDePertenencia{
    + Boolean evaluarCriterio()
}

class CriterioCategoria implements  CriterioDePertenencia{
    + Boolean evaluarCriterio(Hecho hecho)
}

class CriterioRangoFechaHora implements  CriterioDePertenencia{
    + Boolean evaluarCriterio(Hecho hecho)
}

class CriterioUbicacion implements  CriterioDePertenencia{
    + Boolean evaluarCriterio(Hecho hecho)
}

class SolicitudDeEliminacion{
    - Hecho hechoSolicitado
    - String descripcion
    - Estado estado
}

Coleccion *--> CriterioDePertenencia
Coleccion --> Fuente
Coleccion --> Hecho
Hecho --> Origen
Hecho *--> Ubicacion
Hecho --> Categoria
Hecho *--> Etiqueta
Fuente ..> Hecho
ManagerCategoria --> Categoria
SolicitudDeEliminacion --> Hecho
SolicitudDeEliminacion <.. Contribuyente

@enduml